# kaizen

./: .gitignore  Makefile  STYLE_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  auth.py  config.py  database.py  main.py  migrate.py  pyproject.toml  requirements.txt
backend/models/: budget.py  challenge.py  habit.py  todo.py  user.py
backend/routers/: auth.py  budget.py  challenges.py  habits.py  notifications.py  todos.py
backend/services/: budget_calc.py  push.py  scheduler.py  streak.py  telegram.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: BottomNav.tsx  BudgetSummary.tsx  CelebrationModal.tsx  Confetti.tsx  HabitCalendar.tsx  HabitCard.tsx  Layout.tsx  ProtectedRoute.tsx  SpendingChart.tsx  SpendingForm.tsx  SpendingLog.tsx  StreakBadge.tsx  TodoCard.tsx  TodoSection.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useSwipe.ts
frontend/src/models/: habit.ts
frontend/src/pages/: BudgetPage.tsx  ChallengesPage.tsx  HabitsPage.tsx  LoginPage.tsx  SettingsPage.tsx  SignupPage.tsx  TodayPage.tsx
