[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.11.0",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "motor==3.7.0",
    "py-vapid==1.9.2",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "pywebpush==2.0.1",
    "uvicorn[standard]==0.34.3",
]
